# face-recognition

./: CMakeLists.txt  Dockerfile  main.cpp  readme.md
src/: main.cpp
